Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9241

ASSERTION( de->d_op == &ll_d_ops ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • None
    • 3
    • 9223372036854775807

      <4> [<ffffffff815482b1>] ? panic+0xa7/0x179
      <4> [<ffffffffa058105b>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
      <4> [<ffffffffa0ba666f>] ? ll_d_init+0x2ff/0x540 [lustre]
      <4> [<ffffffffa0bebdcb>] ? ll_iget_for_nfs+0x20b/0x300 [lustre]
      <4> [<ffffffffa0bebff9>] ? ll_fh_to_dentry+0x99/0xa0 [lustre]
      <4> [<ffffffffa04ef71c>] ? exportfs_decode_fh+0x5c/0x2bc [exportfs]
      <4> [<ffffffffa05288e0>] ? nfsd_acceptable+0x0/0x120 [nfsd]
      <4> [<ffffffff810f8b11>] ? cpu_quiet_msk+0xc1/0x130
      <4> [<ffffffff810f8c94>] ? rcu_process_dyntick+0x114/0x120
      <4> [<ffffffff810f8d1e>] ? force_quiescent_state+0x7e/0x1a0
      <4> [<ffffffffa0528dda>] ? fh_verify+0x32a/0x640 [nfsd]
      <4> [<ffffffffa05340cc>] ? nfsd3_proc_getattr+0x6c/0xe0 [nfsd]
      <4> [<ffffffffa0525405>] ? nfsd_dispatch+0xe5/0x230 [nfsd]
      <4> [<ffffffffa04a3cf4>] ? svc_process_common+0x344/0x640 [sunrpc]
      <4> [<ffffffff8106c500>] ? default_wake_function+0x0/0x20
      <4> [<ffffffffa04a4390>] ? svc_process+0x110/0x160 [sunrpc]
      <4> [<ffffffffa0525c82>] ? nfsd+0xc2/0x160 [nfsd]
      <4> [<ffffffffa0525bc0>] ? nfsd+0x0/0x160 [nfsd]
      <4> [<ffffffff810a640e>] ? kthread+0x9e/0xc0
      <4> [<ffffffff8100c28a>] ? child_rip+0xa/0x20
      <4> [<ffffffff810a6370>] ? kthread+0x0/0xc0
      <4> [<ffffffff8100c280>] ? child_rip+0x0/0x20

            laisiyao Lai Siyao
            askulysh Andriy Skulysh
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: